Added and setup react-query, axios and react-toastify. Added button in header to test it

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -24,3 +24,5 @@ $btn-font-family: "PT Sans";
 $btn-font-weight: 700;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+@import "../node_modules/react-toastify/scss/main.scss";
