--- a/frontend/src/components/CreateAccount/CreateAccount.css
+++ b/frontend/src/components/CreateAccount/CreateAccount.css
@@ -1,74 +1,62 @@
-
-.createAccount{
-    position:relative;
-    overflow: hidden;
-
-}
-.sectionBlue{
-    max-width: 665px;
-    height: auto;
-    float:left;
-    padding-bottom: 100%;
-    margin-bottom: -100%;
-    background-color: #61dafb;
-    margin-left: 0px;
-    padding-left: 0px;
-}
-.sectionWhite{
-    width: 50vw;
+.col{
+    background:linear-gradient(to top, rgba(0, 63, 226, 0.2), rgba(0, 63, 226, 0.2)), url("../assets/library-image.png");
+    background-repeat: no-repeat;
     height: 100vh;
-    position:absolute;
-    text-align:center;
-    left:665px;
-    padding-bottom: 100%;
+    max-height: 1024px;
+    max-width: 665px;
 }
-.sectionWhite h1{
+.col-8{
+    height: 100vh;
+}
+.col-8 h1 {
     font-family: 'PT Sans';
     font-style: normal;
     font-weight: 700;
     font-size: 96px;
     line-height: 124px;
     color: #0B233F;
+    margin-top: 140px;
 }
-input[type="text"]{
-    width: 477px;
-    height: 56px;
-    border: 1px solid #9C9C9C;
-    border-radius: 6px;
-    background: #F4F4F4;
-    margin-bottom:10px;
+.col-8 form{
+    margin-top: 48px;
+    display:inline-block;
+    text-align:left;
 }
-label{
+.col-8 label {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 28px;
 }
-form{
-    position: absolute;
-    width: 477px;
-    height: 413px;
-    top: 306px;
-    margin-left:149px;
-    text-align:left;
+.errorText{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: red;
 }
-
-button{
-    position: absolute;
+input[type="text"] {
+    width: 477px;
+    height: 56px;
+    border: 1px solid #9C9C9C;
+    border-radius: 6px;
+    background: #F4F4F4;
+    margin-bottom: 10px;
+}
+.button{
     width: 312px;
     height: 74px;
     background: #00B2E2;
     border-radius: 18px;
-    margin-top:67px;
-    margin-left:83px;
-
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
     line-height: 44px;
-
-    color: #FFFFFF;
+    background: #00B2E2;
     border:none;
+    margin-top: 67px;
 }
+
