Scope styles to their respective pages

--- a/frontend/src/components/CreateAccount/CreateAccount.scss
+++ b/frontend/src/components/CreateAccount/CreateAccount.scss
@@ -1,8 +1,10 @@
 @import "../../styles.scss";
 
-.background-container {
-  background: rgba(0, 64, 226, 0.425) url(../../assets/library-image.png);
-  background-size: cover;
-  background-position: center;
-  background-blend-mode: multiply;
+.register-page {
+  .background-container {
+    background: rgba(0, 64, 226, 0.425) url(../../assets/library-image.png);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+  }
 }
