--- a/frontend/src/components/RegisteringForms/SelectMajor.scss
+++ b/frontend/src/components/RegisteringForms/SelectMajor.scss
@@ -10,7 +10,7 @@
   text-align: center;
 }
 .form-select{
-  width: 1076px;
+  min-width: 1076px;
   height: 72px;
   margin-bottom: 39px;
   background: #F4F4F4;
