Finish up course dropdown

--- a/frontend/src/components/RegisteringForms/SelectMajor.scss
+++ b/frontend/src/components/RegisteringForms/SelectMajor.scss
@@ -3,7 +3,10 @@
     user-select: none;
   }
   .form-group {
-    //background-color: aquamarine;
+    background-color: rgba(177, 255, 255, 0.281);
     text-align: left;
+    padding: 2em;
+    margin: 1em;
+    border-radius: 2em;
   }
 }
