--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -26,3 +26,6 @@ $btn-font-weight: 700;
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 @import "../node_modules/react-toastify/scss/main.scss";
+
+@import "../node_modules/react-bootstrap-typeahead/css/Typeahead.scss";
+@import "../node_modules/react-bootstrap-typeahead/css/Typeahead.bs5.scss";
