--- a/frontend/src/components/Tracker/CreditsOverview/CreditsOverview.scss
+++ b/frontend/src/components/Tracker/CreditsOverview/CreditsOverview.scss
@@ -1,4 +1,15 @@
 .credits-overview {
   height: 100%;
   border-right: 1px rgba(0, 0, 0, 0.178) solid;
+  padding: 0;
+  margin: 0;
+
+  .requirement {
+    padding: 0.5em;
+    margin: 0;
+    &:hover {
+      background-color: rgb(243, 243, 243);
+      cursor: pointer;
+    }
+  }
 }
